# wgsl-inline

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: struct_export.rs
src/: lib.rs  result.rs  source.rs
