[package]
name = "wgsl-inline"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "1.0", features = ["full"] }
naga = { version = "0.13", features = ["wgsl-in", "wgsl-out"] }
wgsl-minifier = { version = "0.1", optional = true}
proc-macro2 = "1.0"
quote = "1.0"

[lib]
proc-macro = true

[features]
default = []
minify = ["dep:wgsl-minifier"]