[package]
name = "wgsl-inline"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A macro used to embed WGSL within Rust."
homepage = "https://github.com/LucentFlux/wgsl-inline"
repository = "https://github.com/LucentFlux/wgsl-inline"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**", "/docs/**"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
naga = { version = "0.13", features = ["wgsl-in", "wgsl-out"] }
wgsl-minifier = { version = "0.1", optional = true}
proc-macro2 = "1.0"
quote = "1.0"

[lib]
proc-macro = true

[features]
default = []
minify = ["dep:wgsl-minifier"]