[package]
name = "wgsl-inline"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A macro used to embed WGSL within Rust."
homepage = "https://github.com/LucentFlux/wgsl-inline"
repository = "https://github.com/LucentFlux/wgsl-inline"
readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
naga = { version = "0.13", features = ["wgsl-in", "wgsl-out"] }
naga-to-tokenstream = "0.3"
proc-macro2 = "1.0"
quote = "1.0"

[lib]
proc-macro = true

[features]
minify = ["naga-to-tokenstream/minify"]
glam = ["naga-to-tokenstream/glam"]
naga = ["naga-to-tokenstream/naga"]
encase = ["naga-to-tokenstream/encase"]